# rust-openvx

./: .gitignore  .gitmodules  Cargo.toml  LICENSE.md  README.md
.github/workflows/: rust.yml
canny-edge-detector/: Cargo.toml
canny-edge-detector/src/: main.rs  names.rs  print_attributes.rs
openvx/: Cargo.toml
openvx-sys/: Cargo.toml  README.md  build.rs  wrapper.h
openvx-sys/include/1.3.1/extensions/VX/: vx_khr_bidirectional_parameters.h  vx_khr_pipelining.h  vx_khr_swap_move.h
openvx-sys/src/: lib.rs
openvx/src/: asraw.rs  checkstatus.rs  context.rs  directives.rs  imagetype.rs  lib.rs  macros.rs  name.rs  performance.rs  reference.rs  release.rs  result.rs  setname.rs  types.rs  vxcontext.rs  vxerror.rs  vxgraphstate.rs  vxstatus.rs
openvx/src/types/: context.rs  convolution.rs  delay.rs  distribution.rs  graph.rs  image.rs  kernel.rs  lut.rs  matrix.rs  node.rs  parameter.rs  pyramid.rs  reference.rs  scalar.rs  threshold.rs
