[package]
name = "canny-edge-detector"
version = "0.1.0"
authors = ["Markus Mayer <widemeadows@gmail.com>"]
license = "MIT"
edition = "2021"
publish = false

[dependencies]
openvx-sys = { path ="../openvx-sys" }
openvx = { path ="../openvx" }
opencv = { version = "0.81.3", default-features = false, features = ["imgproc", "highgui", "imgcodecs"] }
