[package]
name = "openvx-sys"
version = "0.1.0"
authors = ["Markus Mayer <widemeadows@gmail.com>"]
edition = "2021"
description = "Native bindings to the OpenVX library"
keywords = ["openvx"]
build = "build.rs"
links = "openvx"

[lib]
name = "libopenvx_sys"
path = "src/lib.rs"

[build-dependencies]
bindgen = "0.65.1"
clang = { version = "2.0.0", features = ["runtime"] }

