[package]
name = "openvx-sys"
version = "0.1.1"
description = "Native bindings to the OpenVX library (1.3.1)"
authors = ["Markus Mayer <widemeadows@gmail.com>"]
edition = "2021"
keywords = ["openvx", "opencl", "opencv", "embedded"]
categories = ["computer-vision", "external-ffi-bindings"]
repository = "https://github.com/sunsided/rust-openvx"
license = "MIT"
build = "build.rs"
links = "openvx"

[lib]
name = "libopenvx_sys"
path = "src/lib.rs"

[build-dependencies]
bindgen = "0.69.4"
clang = { version = "2.0.0", features = ["runtime"] }

