[package]
name = "openvx"
version = "0.1.2"
description = "OpenVX 1.3.1 wrapper"
authors = ["Markus Mayer <widemeadows@gmail.com>"]
keywords = ["openvx", "opencv", "opencl"]
categories = ["computer-vision", "api-bindings"]
repository = "https://github.com/sunsided/rust-openvx"
readme = "../README.md"
license = "MIT"
edition = "2021"

[dependencies]
openvx-sys = { path ="../openvx-sys", version="0.1.0" }
static_assertions = "1.1.0"
